# harn_stdlib

./: .gitignore  OPS.md  PROGRESS.md  README.md  WIKI.md  pyproject.toml  setup.cfg
agent_eval_tests/: DOCUMENTATION.md  __init__.py  design_doc_dual_eval_report.md  test_prompt_eval.py  test_static_stdlib.py
agent_eval_tests/prompts/: AGENTS.md  DesignDoc.md
harn/: DOCUMENTATION.md  __init__.py  __main__.py  agent.py  cli.py  client.py  config.py  prompts.py  sessions.py  settings.py  skills.DOCUMENTATION.md  skills.py  tools.py  tui.py
harn_stdlib/: DOCUMENTATION.md  __init__.py  __main__.py
tests/: conftest.py
tests/test_agent/: test_agent_api.py  test_agent_harness.py  test_agent_loop.py  test_compaction.py  test_env_local.py  test_harness.py  test_integration.py  test_proxy.py  test_resource_formatting.py  test_session.py  test_session_uuid.py  test_system_prompt.py  test_truncate.py
tests/test_ai/: test_anthropic_provider.py  test_api_registry.py  test_azure_openai_responses_provider.py  test_bedrock_provider.py  test_diagnostics_utils.py  test_env_api_keys.py  test_faux_and_images.py  test_fireworks_models.py  test_google_provider.py  test_google_shared.py  test_google_vertex_provider.py  test_mistral_provider.py  test_models.py  test_node_http_proxy.py  test_oauth_and_proxy.py  test_openai_codex_provider.py  test_openai_completions_provider.py  test_openai_responses_provider.py  test_openai_responses_shared.py  test_openrouter_images_provider.py  test_overflow.py  test_phase1_utils.py  test_phase2_shared.py  test_provider_helpers.py  test_types.py  (+11 more)
(+75 files in other folders)
