[metadata]
name = harn
version = 0.2.0
description = Stdlib-only OpenRouter coding agent for the terminal
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =

[options.packages.find]
include =
    harn
    harn_stdlib

[options.entry_points]
console_scripts =
    harn = harn.cli:main
    harn-stdlib = harn.cli:main
